# sudo-windows

./: .gitignore  Cargo.toml  README.md  appveyor.yml  main.cpp  stdafx.h  sudo-windows.sln  sudo-windows.vcxproj  sudo-windows.vcxproj.filters
src/: main.rs
