[package]
name = "sudo-windows"
version = "0.2.0"
authors = ["jingyu9575 <qw2g64@outlook.com>"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
winapi = { version = "0.3", features = [
	"winbase", "winuser", "wincon", "shellapi", "synchapi", "handleapi",
	"processthreadsapi", "processenv"
] }